# secop-ophyd

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  AsyncSecopClient.py  README.md  SECoPDevices.py  SECoPParameter.py  SECoPSignal.py  bssecclient.py  cryo.sh  makefile  propertykeys.py  pyproject.toml  requirements.txt
.github/workflows/: ci-testing.yml  code.yaml
URsimDocker/: Dockerfile  docker-compose.yml  docker_commands.txt
URsimDocker/programs/: in1.urp
bssecop/: AsyncFrappyClient.py  AsyncSecopClient.py  SECoPDevices.py  SECoPSignal.py  async_frappy_client.py  bssecclient.py  ipy_asyncclient_notebook.ipynb  ipy_demo.ipynb  ipy_test.ipynb  util.py
cfg/: cryo_cfg.py  ophyd_secop_test_cfg.py
docs/: GenNodeCode_Refactoring.md
docs/source/: conf.py  getting_started.rst  index.rst  reference.rst  tutorial.rst  user_guide.rst
docs/source/_static/: custom.css
epics-testing/: persistent_data.ipynb  secop.ipynb
frappy_modules/: cryo.py  ophyd_secop_test_modules.py
jupyter/: genNodeClass.py  ipy_SECoP_DEMO_HZB.ipynb  ipy_SECoP_gen_plan.ipynb  ipy_SECoP_workshop_Demo.ipynb  ipy_demo.ipynb  ipy_secop2dtype.ipynb  ipy_test.ipynb  ophyd_obj.ipynb  robo-testing.ipynb
secop_ophyd/: AsyncFrappyClient.py  AsyncSecopClient.py  SECoPDevices.py  SECoPSignal.py  bssecclient.py  ipy_asyncclient_notebook.ipynb  ipy_demo.ipynb  ipy_test.ipynb  util.py
src/secop_ophyd/: AsyncFrappyClient.py  GenNodeCode.py  SECoPDevices.py  SECoPSignal.py  logs.py  propertykeys.py  util.py
src/secop_ophyd/templates/: generated_classes.py.jinja2
test/: conftest.py  test.py  test_Client.py  test_Node.py  test_RE.py  test_async_frappy_client.py  test_commands.py  test_nested.py  test_path.py
tests/: conftest.py  genNodeClass.py  test_ classgen.py  test_Nexus.py  test_Node.py  test_RE.py  test_annotation.py  test_async_frappy_client.py  test_classgen.py  test_commands.py  test_dtype.py  test_enum_codegen.py  test_enum_merging.py  test_gencode_refactor.py  test_nested.py  test_path.py  test_primitive_arrays.py
tests/cfg/: cryo_cfg.py  generalConfig.cfg  ophyd_secop_test_cfg.py
tests/frappy_modules/: ophyd_secop_test_modules.py
tests/static_test_data/: SHALL_mass_spec_describe.txt  SHALL_mass_spec_describe_no_impl_prop.txt
