[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"



[project]
name = "secop-ophyd"
dynamic = ["version"]
description = "An Interface between bluesky and SECoP, using ophyd and frappy-client"

dependencies = [
    'ophyd-async >= 0.10.0',
    'frappy-core == 0.20.4',
    'black',
    'Jinja2',
    'autoflake',

]

license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    'numpy',
    'isort',
    'pytest',
    'pep8-naming',
    'mypy',
    'wheel',
    'cycler',
    'mlzlog',
    'matplotlib',
    'pytest-asyncio',
    'pytest-xprocess',
    'pytest-cov',
    'pre-commit',
    'ipykernel',
    'ophyd',
    'python-dotenv',
    'bluesky',
    "sphinx !=4.1.0, !=4.1.1, !=4.1.2, !=4.2.0",
    "sphinx-click",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "sphinx-design",
    "sphinxcontrib-mermaid",
    "sphinx-autodoc2",
    "myst-parser",
    "numpydoc",
    'snakefmt',

]



[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
asyncio_mode="auto"
filterwarnings = "ignore::PendingDeprecationWarning"


[tool.isort]
float_to_top = true
profile = "black"
skip = [".gitignore"]
known_third_party = ["frappy"]
skip_glob = ["frappy/*","epics-testing/*","src/secop_ophyd/_version.py"]


[[project.authors]] # Further authors may be added by duplicating this section
email = "peter.braun@helmholtz-berlin.de"
name = "Peter Braun"






[tool.black]
line-length =  88


[tool.setuptools_scm]
write_to = "src/secop_ophyd/_version.py"
version_file = "src/secop_ophyd/_version.py"
